Set services section image heights to auto to avoid distorting on wider phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ main {
 
 #events img {
     width:100%;
-    max-height: 200px;
+    height: auto;
 }
 
 /* Contact/opening times section */
@@ -247,7 +247,7 @@ footer {
 @media screen and(min-width: 375px){
 #events img {
     width:80%;
-    max-height: 200px;
+    height: auto;
 }
 }
 
